# console-finance-game

./: CMakeLists.txt  LICENSE  README.md
include/: Board.h  Event.h  Exceptions.h  InsiderTradingEvent.h  PillEvent.h  Player.h
src/: Board.cpp  Board.h  BossEvent.cpp  BossEvent.h  BossMariaEvent.h  CorpseEvent.cpp  CorpseEvent.h  Dice.cpp  Dice.h  Exceptions.h  GamblingEvent.cpp  GamblingEvent.h  Game.cpp  Game.h  InsiderTradingEvent.cpp  InsiderTradingEvent.h  PillEvent.cpp  Player.cpp  Player.h  TrapEvent.cpp  TrapEvent.h  UI.h  main.cpp
tests/: test.cpp
